objects/Staffing_Event_Day__c.object
<CustomObject>
    <description>Child of Staffing Event. This object houses the days that made up an event, and all the day-specific information</description>
    <fields>
        <fullName>Access_details__c</fullName>
        <formula>&quot;This field has not yet been created on Account&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Access details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Day_Venue__r.BillingStreet &amp;  BR() &amp;
 Day_Venue__r.BillingCity &amp;  BR() &amp;
 Day_Venue__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Day_Venue__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_s__c</fullName>
        <label>Cluster(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3BIC</fullName>
                </value>
                <value>
                    <fullName>BAP</fullName>
                </value>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BBLG</fullName>
                </value>
                <value>
                    <fullName>BCHIC</fullName>
                </value>
                <value>
                    <fullName>BHARN</fullName>
                </value>
                <value>
                    <fullName>BHEN</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>BlackCountry</fullName>
                </value>
                <value>
                    <fullName>Brad</fullName>
                </value>
                <value>
                    <fullName>Bradford</fullName>
                </value>
                <value>
                    <fullName>BWELL</fullName>
                </value>
                <value>
                    <fullName>CAB</fullName>
                </value>
                <value>
                    <fullName>CAS</fullName>
                </value>
                <value>
                    <fullName>CaW</fullName>
                </value>
                <value>
                    <fullName>CLS</fullName>
                </value>
                <value>
                    <fullName>East Surrey</fullName>
                </value>
                <value>
                    <fullName>EBB</fullName>
                </value>
                <value>
                    <fullName>ESurrey</fullName>
                </value>
                <value>
                    <fullName>Greater Manchester North &amp; Central</fullName>
                </value>
                <value>
                    <fullName>Greenwich</fullName>
                </value>
                <value>
                    <fullName>HABAN</fullName>
                </value>
                <value>
                    <fullName>HEAL</fullName>
                </value>
                <value>
                    <fullName>HEN</fullName>
                </value>
                <value>
                    <fullName>HER</fullName>
                </value>
                <value>
                    <fullName>HEWT</fullName>
                </value>
                <value>
                    <fullName>HiHaB</fullName>
                </value>
                <value>
                    <fullName>HIHO</fullName>
                </value>
                <value>
                    <fullName>Hillingdon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_Role1__c</fullName>
        <label># PLs</label>
        <summaryFilterItems>
            <field>Staffing_Event_attendance__c.Registration_status__c</field>
            <operation>equals</operation>
            <value>Registered</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Staffing_Event_attendance__c.Role_from_JA__c</field>
            <operation>equals</operation>
            <value>Programme Leader</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Staffing_Event_attendance__c.Requested_new_date__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Staffing_Event_attendance__c.Staffing_Event_Day__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Role2__c</fullName>
        <label># APLs</label>
        <summaryFilterItems>
            <field>Staffing_Event_attendance__c.Role_from_JA__c</field>
            <operation>equals</operation>
            <value>Assistant Programme Leader</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Staffing_Event_attendance__c.Registration_status__c</field>
            <operation>equals</operation>
            <value>Registered</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Staffing_Event_attendance__c.Requested_new_date__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Staffing_Event_attendance__c.Staffing_Event_Day__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Role3__c</fullName>
        <label># SMs</label>
        <summaryFilterItems>
            <field>Staffing_Event_attendance__c.Role_from_JA__c</field>
            <operation>equals</operation>
            <value>Senior Mentor</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Staffing_Event_attendance__c.Registration_status__c</field>
            <operation>equals</operation>
            <value>Registered</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Staffing_Event_attendance__c.Requested_new_date__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Staffing_Event_attendance__c.Staffing_Event_Day__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Day_Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Day Venue</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Staffing Event Days</relationshipLabel>
        <relationshipName>Staffing_Event_Days</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Day_date__c</fullName>
        <label>Day date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_number__c</fullName>
        <label>Day number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Day_specific_info_1__c</fullName>
        <label>Day-specific info 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Day_specific_info_2__c</fullName>
        <label>Day-specific info 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Day_specific_info_3__c</fullName>
        <label>Day-specific info 3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Day_venue_name__c</fullName>
        <formula>Day_Venue__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day venue name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directions_URL__c</fullName>
        <label>Directions (URL)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Driving_and_parking_instructions__c</fullName>
        <description>Feeds into SAW. Work around as field on Account is long-text and cannot be referenced in a formula. This field is hidden from Staffing</description>
        <formula>Driving_and_parking_instructions_text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Driving &amp; parking instructions (formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driving_and_parking_instructions_text__c</fullName>
        <label>Driving and parking instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Help_text_1__c</fullName>
        <formula>&quot;Remember that &apos;Publish to event (whole day)&apos; needs to be ticked for this record to appear on SAW&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help text 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Role1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Role 1 so that API name isn&apos;t confusing when/if field label is updated</description>
        <label>Max PLs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Role2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Role 2 so that API name isn&apos;t confusing when/if field label is updated</description>
        <label>Max APLs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Role3__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Role 3 so that API name isn&apos;t confusing when/if field label is updated</description>
        <label>Max SMs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_attendees_total__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total number of people who can attend, regardless of role type</inlineHelpText>
        <label>Max attendees (total)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publish_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_Day_specific_info_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish Day-specific info 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_Day_specific_info_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish Day-specific info 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_Day_specific_info_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish Day-specific info 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_Directions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish Directions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_Role_specific_info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish Role-specific info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_Venue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish Venue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_city__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish city</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_driving_and_parking_instructions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish driving and parking instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_to_SAW_whole_day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish to SAW (whole day)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_useful_link_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish useful link 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_useful_link_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish useful link 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_useful_link_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish useful link 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role1_Event_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PL Event Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role1_related_info__c</fullName>
        <description>Role 1 so that API name isn&apos;t confusing when/if field label is updated</description>
        <label>PL-related info</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role2_Event_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APL Event Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role2_related_info__c</fullName>
        <inlineHelpText>Role 2 so that API name isn&apos;t confusing when/if field label is updated</inlineHelpText>
        <label>APL-related info</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role3_event_day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SM event day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role3_related_info__c</fullName>
        <description>Role 3 so that API name isn&apos;t confusing when/if field label is updated</description>
        <label>SM-related info</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Roles_to_invite__c</fullName>
        <label>Roles to invite</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Programme Leader</fullName>
                </value>
                <value>
                    <fullName>Assistant Programme Leader</fullName>
                </value>
                <value>
                    <fullName>Senior Mentor</fullName>
                </value>
                <value>
                    <fullName>Community Facilitator</fullName>
                </value>
                <value>
                    <fullName>Senior Community Facilitator</fullName>
                </value>
                <value>
                    <fullName>Residential Mentor</fullName>
                </value>
                <value>
                    <fullName>Support Worker</fullName>
                </value>
                <value>
                    <fullName>Learning and Behaviour Mentor</fullName>
                </value>
                <value>
                    <fullName>Social Inclusion Associate</fullName>
                </value>
                <value>
                    <fullName>Personal Coach</fullName>
                </value>
                <value>
                    <fullName>Logistics Officer</fullName>
                </value>
                <value>
                    <fullName>Practitioner Plus</fullName>
                </value>
                <value>
                    <fullName>Practitioner - Drama</fullName>
                </value>
                <value>
                    <fullName>Practitioner - Enterprise</fullName>
                </value>
                <value>
                    <fullName>Practitioner - Sport</fullName>
                </value>
                <value>
                    <fullName>Practitioner - Photography</fullName>
                </value>
                <value>
                    <fullName>Practitioner - Media</fullName>
                </value>
                <value>
                    <fullName>Practitioner - Music</fullName>
                </value>
                <value>
                    <fullName>Practitioner - Art</fullName>
                </value>
                <value>
                    <fullName>Project Volunteer</fullName>
                </value>
                <value>
                    <fullName>Programme Administrator</fullName>
                </value>
                <value>
                    <fullName>Delivery Assistant Programme Manager</fullName>
                </value>
                <value>
                    <fullName>Graduation Helper</fullName>
                </value>
                <value>
                    <fullName>Residential Practitioner</fullName>
                </value>
                <value>
                    <fullName>Associate Mentor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Summer</fullName>
                </value>
                <value>
                    <fullName>Autumn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff_type__c</fullName>
        <label>Staff type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Application</fullName>
                </value>
                <value>
                    <fullName>Returner</fullName>
                </value>
                <value>
                    <fullName>Returner - same role</fullName>
                </value>
                <value>
                    <fullName>Returner - different role</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staffing_Event__c</fullName>
        <label>Staffing Event</label>
        <referenceTo>Staffing_Event__c</referenceTo>
        <relationshipLabel>Staffing Event Days</relationshipLabel>
        <relationshipName>Staffing_Event_Days</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Useful_link_1__c</fullName>
        <label>Useful link 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Useful_link_1_description__c</fullName>
        <label>Useful link 1:description</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Useful_link_2__c</fullName>
        <label>Useful link 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Useful_link_2_description__c</fullName>
        <label>Useful link 2:description</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Useful_link_3__c</fullName>
        <label>Useful link 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Useful_link_3_description__c</fullName>
        <label>Useful link 3:description</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>registered_attendees__c</fullName>
        <label># registered attendees</label>
        <summaryFilterItems>
            <field>Staffing_Event_attendance__c.Registration_status__c</field>
            <operation>equals</operation>
            <value>Registered</value>
        </summaryFilterItems>
        <summaryForeignKey>Staffing_Event_attendance__c.Staffing_Event_Day__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Staffing Event Day</label>
    <listViews>
        <fullName>Abby_First_Aid_training_2015_view</fullName>
        <columns>Staffing_Event__c</columns>
        <columns>NAME</columns>
        <columns>Day_date__c</columns>
        <columns>Day_Venue__c</columns>
        <columns>Publish_to_SAW_whole_day__c</columns>
        <columns>Max_attendees_total__c</columns>
        <columns>registered_attendees__c</columns>
        <columns>Max_Role3__c</columns>
        <columns>Count_Role3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Staffing_Event_Day__c.X2016</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>first aid</value>
        </filters>
        <label>Abby First Aid training 2016 view</label>
        <sharedTo>
            <roleAndSubordinates>Head_of_Staffing</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Abby_First_Aid_training_2016_view</fullName>
        <columns>Staffing_Event__c</columns>
        <columns>NAME</columns>
        <columns>Day_date__c</columns>
        <columns>Day_Venue__c</columns>
        <columns>Publish_to_SAW_whole_day__c</columns>
        <columns>Max_attendees_total__c</columns>
        <columns>registered_attendees__c</columns>
        <columns>Max_Role3__c</columns>
        <columns>Count_Role3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Staffing_Event_Day__c.X2016</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>first aid</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>South england</value>
        </filters>
        <label>Abby First Aid training 2016 view</label>
        <sharedTo>
            <roleAndSubordinates>Head_of_Staffing</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Jason</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Day_number__c</columns>
        <columns>Publish_to_SAW_whole_day__c</columns>
        <columns>Cluster_s__c</columns>
        <columns>Roles_to_invite__c</columns>
        <columns>Day_date__c</columns>
        <columns>Staff_type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Staffing_Event__c</field>
            <operation>contains</operation>
            <value>Training</value>
        </filters>
        <filters>
            <field>Cluster_s__c</field>
            <operation>includes</operation>
            <value>ESurrey,WSurrey</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Staffing_Event_Day__c.X2015</value>
        </filters>
        <filters>
            <field>Roles_to_invite__c</field>
            <operation>includes</operation>
            <value>Senior Mentor,Community Facilitator,Programme Leader</value>
        </filters>
        <label>2015 Surrey Training Events</label>
        <sharedTo>
            <roleAndSubordinates>Head_of_Staffing</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LEE_Prac_LDN_Training</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>Cluster_s__c</columns>
        <columns>Time__c</columns>
        <columns>Publish_to_SAW_whole_day__c</columns>
        <columns>Roles_to_invite__c</columns>
        <columns>Day_date__c</columns>
        <columns>Staff_type__c</columns>
        <columns>registered_attendees__c</columns>
        <columns>Max_attendees_total__c</columns>
        <columns>Max_Role7__c</columns>
        <columns>Day_number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Staffing_Event__c</field>
            <operation>contains</operation>
            <value>Training</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Staffing_Event_Day__c.X2015</value>
        </filters>
        <filters>
            <field>Staffing_Event__c</field>
            <operation>contains</operation>
            <value>Practitioner</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <filters>
            <field>Roles_to_invite__c</field>
            <operation>includes</operation>
            <value>Practitioner - Drama</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>London</value>
        </filters>
        <label>2015 Training London Practitioners Drama</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Associate_Staffing_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Head_of_Staffing</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SeniorStaffingAssociate</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>StaffingAssociate</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Staffing_Coordinator</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Staffing_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Staffing_Projects_Associate</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>North_2016_Manc_Assessment_View</fullName>
        <columns>Day_date__c</columns>
        <columns>NAME</columns>
        <columns>Publish_to_SAW_whole_day__c</columns>
        <columns>registered_attendees__c</columns>
        <columns>Max_attendees_total__c</columns>
        <columns>Priority__c</columns>
        <columns>Cluster_s__c</columns>
        <columns>Day_Venue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Staffing_Event_Day__c.X2016</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Birmingham,Warwickshire</value>
        </filters>
        <label>WM - 2016 Assessment View</label>
    </listViews>
    <listViews>
        <fullName>North_2016_North_All_Training_View</fullName>
        <columns>Day_date__c</columns>
        <columns>NAME</columns>
        <columns>Publish_to_SAW_whole_day__c</columns>
        <columns>registered_attendees__c</columns>
        <columns>Max_attendees_total__c</columns>
        <columns>Priority__c</columns>
        <columns>Cluster_s__c</columns>
        <columns>Day_Venue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Staffing_Event_Day__c.X2016</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>,Test</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Yorkshire,Manchester,Lancashire</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Training</value>
        </filters>
        <label>North- 2016 North All Training View</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Head_of_Staffing</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SeniorStaffingAssociate</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>StaffingAssociate</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Staffing_Coordinator</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Staffing_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>North_2016_North_Pract_Assessment_View</fullName>
        <columns>Day_date__c</columns>
        <columns>NAME</columns>
        <columns>registered_attendees__c</columns>
        <columns>Max_attendees_total__c</columns>
        <columns>Publish_to_SAW_whole_day__c</columns>
        <columns>Cluster_s__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Staffing_Event_Day__c.X2016</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Manchester,Lancashire</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Practitioner</value>
        </filters>
        <label>North- 2016 North Pract Assessment View</label>
    </listViews>
    <listViews>
        <fullName>North_2016_Yorks_Assessment_View</fullName>
        <columns>Day_date__c</columns>
        <columns>NAME</columns>
        <columns>Publish_to_SAW_whole_day__c</columns>
        <columns>registered_attendees__c</columns>
        <columns>Max_attendees_total__c</columns>
        <columns>Priority__c</columns>
        <columns>Cluster_s__c</columns>
        <columns>Day_Venue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Staffing_Event_Day__c.X2016</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Yorkshire Mentor/Facilitator Assessment - 11/03/2016 from 1:00pm to 5:00pm</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Yorkshire</value>
        </filters>
        <filters>
            <field>Day_date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>North- 2016 Yorks Assessment View</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Head_of_Staffing</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SeniorStaffingAssociate</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>StaffingAssociate</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Staffing_Coordinator</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Staffing_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
</CustomObject>